sfc: Rename implementation of ndo_set_rx_mode (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16048,6 +16048,7 @@
 	patches.drivers/sfc-0119-sfc-Add-EF10-register-and-structure-definitions.patch
 	patches.drivers/sfc-0120-sfc-Allocate-NVRAM-partition-ID-range-for-PHY-images.patch
 	patches.drivers/sfc-0121-sfc-Make-efx_mcdi_-init-fini-call-efx_mcdi_drv_attac.patch
+	patches.drivers/sfc-0122-sfc-Rename-implementation-of-ndo_set_rx_mode.patch
 
 	########################################################
 	# Wireless Networking
