sfc: Don't refer to 'stack' in filter implementation (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16125,6 +16125,7 @@
 	patches.drivers/sfc-0196-sfc-Add-more-information-to-many-warnings-using-WARN.patch
 	patches.drivers/sfc-0197-sfc-Change-efx_nic_type-rx_push_indir_table-to-push-.patch
 	patches.drivers/sfc-0198-sfc-Change-priority-and-flags-for-automatic-MAC-filt.patch
+	patches.drivers/sfc-0199-sfc-Don-t-refer-to-stack-in-filter-implementation.patch
 
 	########################################################
 	# Wireless Networking
