sfc: Introduce inline functions to simplify TX insertion (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16068,6 +16068,7 @@
 	patches.drivers/sfc-0139-sfc-Implement-firmware-assisted-TSO-for-EF10.patch
 	patches.drivers/sfc-0140-sfc-Allocate-and-link-PIO-buffers-map-them-with-writ.patch
 	patches.drivers/sfc-0141-sfc-Separate-out-queue-empty-check-from-efx_nic_may_.patch
+	patches.drivers/sfc-0142-sfc-Introduce-inline-functions-to-simplify-TX-insert.patch
 
 	########################################################
 	# Wireless Networking
