--- a/series.conf
+++ b/series.conf
@@ -16130,6 +16130,7 @@
 	patches.drivers/sfc-0201-sfc-Implement-efx_nic_type-filter_clear_rx-operation.patch
 	patches.drivers/sfc-0202-sfc-remove-unused-refcnt-from-efx_rx_page_state.patch
 	patches.drivers/sfc-0203-sfc-remove-unused-enum-efx_rx_alloc_method.patch
+	patches.drivers/sfc-0204-sfc-Changed-the-statistic-name-emerg_-fetch-wait-to-.patch
 
 	########################################################
 	# Wireless Networking
