sfc: add extra RX drop counters for nodesc_trunc and noskb_drop (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16163,6 +16163,7 @@
 	patches.drivers/sfc-0234-sfc-PIO-Restrict-to-64bit-arch-and-use-64-bit-writes.patch
 	patches.drivers/sfc-0235-sfc-Adding-PCI-ID-for-Solarflare-7000-series-40G-net.patch
 	patches.drivers/sfc-0236-sfc-Add-40G-link-capability-decoding.patch
+	patches.drivers/sfc-0237-sfc-add-extra-RX-drop-counters-for-nodesc_trunc-and-.patch
 
 	########################################################
 	# Wireless Networking
