sfc: reuse pages to avoid DMA mapping/unmapping costs (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15949,6 +15949,7 @@
 	patches.drivers/sfc-0020-sfc-Update-RX-buffer-address-together-with-length.patch
 	patches.drivers/sfc-0021-sfc-Enable-RX-DMA-scattering-where-possible.patch
 	patches.drivers/sfc-0022-drivers-net-Add-moduleparam.h-to-drivers-as-required.patch
+	patches.drivers/sfc-0023-sfc-reuse-pages-to-avoid-DMA-mapping-unmapping-costs.patch
 
 	########################################################
 	# Wireless Networking
