sfc: Increase MCDI status timeout to 250ms (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16060,6 +16060,7 @@
 	patches.drivers/sfc-0131-sfc-Clean-up-validation-of-datapath-capabilities.patch
 	patches.drivers/sfc-0132-sfc-Reinitialise-and-re-validate-datapath-caps-after.patch
 	patches.drivers/sfc-0133-sfc-Wait-for-MC-reboot-to-complete-before-scheduling.patch
+	patches.drivers/sfc-0134-sfc-Increase-MCDI-status-timeout-to-250ms.patch
 
 	########################################################
 	# Wireless Networking
