net: get rid of SET_ETHTOOL_OPS (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16159,6 +16159,7 @@
 	patches.drivers/sfc-0230-Call-efx_set_channels-before-efx-type-dimension_reso.patch
 	patches.drivers/sfc-0231-sfc-On-MCDI-timeout-issue-an-FLR-and-mark-MCDI-to-fa.patch
 	patches.drivers/sfc-0232-sfc-fix-calling-of-free_irq-with-already-free-vector.patch
+	patches.drivers/sfc-0233-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
