sfc: remove incorrect EFX_BUG_ON_PARANOID check (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16169,6 +16169,7 @@
 	patches.drivers/sfc-0240-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/sfc-0241-sfc-Convert-the-normal-transmit-complete-path-to-dev.patch
 	patches.drivers/sfc-0242-sfc-fix-addr_list_lock-spinlock-use-before-init.patch
+	patches.drivers/sfc-0243-sfc-remove-incorrect-EFX_BUG_ON_PARANOID-check.patch
 
 	########################################################
 	# Wireless Networking
