sfc: Move siena_reset_hw() and siena_map_reset_reason() into MCDI module (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15983,6 +15983,7 @@
 	patches.drivers/sfc-0054-sfc-Use-proper-macros-to-declare-and-access-MCDI-arr.patch
 	patches.drivers/sfc-0055-sfc-Ensure-MCDI-buffers-but-not-lengths-are-dword-al.patch
 	patches.drivers/sfc-0056-sfc-Add-and-use-MCDI_SET_QWORD-and-MCDI_SET_ARRAY_QW.patch
+	patches.drivers/sfc-0057-sfc-Move-siena_reset_hw-and-siena_map_reset_reason-i.patch
 
 	########################################################
 	# Wireless Networking
