--- a/series.conf
+++ b/series.conf
@@ -15990,6 +15990,7 @@
 	patches.drivers/sfc-0061-sfc-Make-MCDI-independent-of-Siena.patch
 	patches.drivers/sfc-0062-sfc-Add-GFP-flags-to-efx_nic_alloc_buffer-and-make-m.patch
 	patches.drivers/sfc-0063-sfc-Make-struct-efx_special_buffer-less-special.patch
+	patches.drivers/sfc-0064-sfc-Rename-Falcon-architecture-register-definitions.patch
 
 	########################################################
 	# Wireless Networking
