--- a/series.conf
+++ b/series.conf
@@ -16012,6 +16012,7 @@
 	patches.drivers/sfc-0083-sfc-Extend-and-abstract-efx_filter_spec-to-cover-Hun.patch
 	patches.drivers/sfc-0084-sfc-Split-Falcon-arch-specific-and-common-filter-sta.patch
 	patches.drivers/sfc-0085-sfc-Refactor-Falcon-arch-search-limit-reset.patch
+	patches.drivers/sfc-0086-sfc-Make-most-filter-operations-NIC-type-specific.patch
 
 	########################################################
 	# Wireless Networking
