sfc: Remove write permission from phy_type attribute (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15960,6 +15960,7 @@
 	patches.drivers/sfc-0031-sfc-Delete-EFX_PAGE_IP_ALIGN-equivalent-to-NET_IP_AL.patch
 	patches.drivers/sfc-0032-sfc-Reduce-RX-scatter-buffer-size-and-reduce-alignme.patch
 	patches.drivers/sfc-0033-sfc-Store-port-number-in-private-data-not-net_device.patch
+	patches.drivers/sfc-0034-sfc-Remove-write-permission-from-phy_type-attribute.patch
 
 	########################################################
 	# Wireless Networking
