--- a/series.conf
+++ b/series.conf
@@ -16097,6 +16097,7 @@
 	patches.drivers/sfc-0168-sfc-Tighten-the-check-for-RX-merged-completion-event.patch
 	patches.drivers/sfc-0169-sfc-Make-initial-fill-of-RX-descriptors-synchronous.patch
 	patches.drivers/sfc-0170-sfc-Correct-RX-dropped-count-for-drops-while-interfa.patch
+	patches.drivers/sfc-0171-sfc-Report-units-in-sensor-warnings.patch
 
 	########################################################
 	# Wireless Networking
