--- a/series.conf
+++ b/series.conf
@@ -16015,6 +16015,7 @@
 	patches.drivers/sfc-0086-sfc-Make-most-filter-operations-NIC-type-specific.patch
 	patches.drivers/sfc-0087-sfc-Refactor-Falcon-arch-filter-removal.patch
 	patches.drivers/sfc-0088-sfc-Add-flag-for-stack-owned-RX-MAC-filters.patch
+	patches.drivers/sfc-0089-sfc-Define-and-use-MCDI_POPULATE_DWORD_-1-2-3-4-5-6-.patch
 
 	########################################################
 	# Wireless Networking
