sfc: Enable RX scatter for flows steered by RFS (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15970,6 +15970,7 @@
 	patches.drivers/sfc-0041-sfc-Do-not-pass-non-TCP-packets-into-GRO-code.patch
 	patches.drivers/sfc-0042-sfc-Fix-IRQ-cleanup-in-case-of-a-probe-failure.patch
 	patches.drivers/sfc-0043-sfc-Fix-memory-leak-when-discarding-scattered-packet.patch
+	patches.drivers/sfc-0044-sfc-Enable-RX-scatter-for-flows-steered-by-RFS.patch
 
 	########################################################
 	# Wireless Networking
