--- a/series.conf
+++ b/series.conf
@@ -16047,6 +16047,7 @@
 	patches.drivers/sfc-0118-sfc-Extend-struct-efx_tx_buffer-to-allow-pushing-opt.patch
 	patches.drivers/sfc-0119-sfc-Add-EF10-register-and-structure-definitions.patch
 	patches.drivers/sfc-0120-sfc-Allocate-NVRAM-partition-ID-range-for-PHY-images.patch
+	patches.drivers/sfc-0121-sfc-Make-efx_mcdi_-init-fini-call-efx_mcdi_drv_attac.patch
 
 	########################################################
 	# Wireless Networking
