--- a/series.conf
+++ b/series.conf
@@ -15963,6 +15963,7 @@
 	patches.drivers/sfc-0034-sfc-Remove-write-permission-from-phy_type-attribute.patch
 	patches.drivers/sfc-0035-sfc-Fix-EEH-with-legacy-interrupts.patch
 	patches.drivers/sfc-0036-sfc-Enable-RX-checksum-offload-for-packets-not-handl.patch
+	patches.drivers/sfc-0037-sfc-Increase-size-of-RX-SKB-header-area.patch
 
 	########################################################
 	# Wireless Networking
