--- a/series.conf
+++ b/series.conf
@@ -16111,6 +16111,7 @@
 	patches.drivers/sfc-0182-sfc-Do-not-use-MAC-address-as-clock-name.patch
 	patches.drivers/sfc-0183-sfc-Initialise-efx_ptp_data-phc_clock_info-from-a-st.patch
 	patches.drivers/sfc-0184-sfc-Remove-kernel-doc-for-efx_ptp_data-fields-not-pr.patch
+	patches.drivers/sfc-0185-sfc-PTP-tidy-up-unused-useless-variables.patch
 
 	########################################################
 	# Wireless Networking
