sfc: Define and set RX buffer flag for packets parsed as TCP (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15966,6 +15966,7 @@
 	patches.drivers/sfc-0037-sfc-Increase-size-of-RX-SKB-header-area.patch
 	patches.drivers/sfc-0038-sfc-Report-software-timestamping-capabilities.patch
 	patches.drivers/sfc-0039-sfc-Enable-accelerated-RFS-on-vlans.patch
+	patches.drivers/sfc-0040-sfc-Define-and-set-RX-buffer-flag-for-packets-parsed.patch
 
 	########################################################
 	# Wireless Networking
