--- a/series.conf
+++ b/series.conf
@@ -15941,6 +15941,7 @@
 	patches.drivers/sfc-0012-sfc-Disable-RSS-when-using-SR-IOV-and-only-1-RX-queu.patch
 	patches.drivers/sfc-0013-sfc-Add-AER-and-EEH-support-for-Siena.patch
 	patches.drivers/sfc-0014-sfc-Document-current-usage-of-efx_rx_buffer-len-and-.patch
+	patches.drivers/sfc-0015-sfc-Properly-distinguish-RX-buffer-and-DMA-lengths.patch
 
 	########################################################
 	# Wireless Networking
