sfc: Enable RX DMA scattering where possible (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15947,6 +15947,7 @@
 	patches.drivers/sfc-0018-sfc-Replace-efx_rx_buf_eh-with-simpler-efx_rx_buf_va.patch
 	patches.drivers/sfc-0019-sfc-Explicitly-prefetch-RX-hash-prefix-not-just-Ethe.patch
 	patches.drivers/sfc-0020-sfc-Update-RX-buffer-address-together-with-length.patch
+	patches.drivers/sfc-0021-sfc-Enable-RX-DMA-scattering-where-possible.patch
 
 	########################################################
 	# Wireless Networking
