sfc: Wrap __efx_rx_packet() with efx_rx_flush_packet() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15943,6 +15943,7 @@
 	patches.drivers/sfc-0014-sfc-Document-current-usage-of-efx_rx_buffer-len-and-.patch
 	patches.drivers/sfc-0015-sfc-Properly-distinguish-RX-buffer-and-DMA-lengths.patch
 	patches.drivers/sfc-0016-sfc-Make-RX-queue-descriptor-counts-unsigned-for-con.patch
+	patches.drivers/sfc-0017-sfc-Wrap-__efx_rx_packet-with-efx_rx_flush_packet.patch
 
 	########################################################
 	# Wireless Networking
