--- a/series.conf
+++ b/series.conf
@@ -16167,6 +16167,7 @@
 	patches.drivers/sfc-0238-sfc-Add-per-queue-statistics-in-ethtool.patch
 	patches.drivers/sfc-0239-sfc-Use-__iowrite64_copy-instead-of-a-slightly-diffe.patch
 	patches.drivers/sfc-0240-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/sfc-0241-sfc-Convert-the-normal-transmit-complete-path-to-dev.patch
 
 	########################################################
 	# Wireless Networking
