sfc: PTP: Moderate log message on event queue overflow (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16083,6 +16083,7 @@
 	patches.drivers/sfc-0154-sfc-Implement-the-SIOCGHWTSTAMP-ioctl.patch
 	patches.fixes/net-introduce-skb_transport_header_was_set.patch
 	patches.drivers/sfc-0156-sfc-Add-length-checks-to-efx_xmit_with_hwtstamp-and-.patch
+	patches.drivers/sfc-0157-sfc-PTP-Moderate-log-message-on-event-queue-overflow.patch
 
 	########################################################
 	# Wireless Networking
