sfc: Replace efx_rx_buf_eh() with simpler efx_rx_buf_va() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15944,6 +15944,7 @@
 	patches.drivers/sfc-0015-sfc-Properly-distinguish-RX-buffer-and-DMA-lengths.patch
 	patches.drivers/sfc-0016-sfc-Make-RX-queue-descriptor-counts-unsigned-for-con.patch
 	patches.drivers/sfc-0017-sfc-Wrap-__efx_rx_packet-with-efx_rx_flush_packet.patch
+	patches.drivers/sfc-0018-sfc-Replace-efx_rx_buf_eh-with-simpler-efx_rx_buf_va.patch
 
 	########################################################
 	# Wireless Networking
