sfc: Add support for Solarflare SFC9100 family (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16050,6 +16050,7 @@
 	patches.drivers/sfc-0121-sfc-Make-efx_mcdi_-init-fini-call-efx_mcdi_drv_attac.patch
 	patches.drivers/sfc-0122-sfc-Rename-implementation-of-ndo_set_rx_mode.patch
 	patches.fixes/etherdevice-introduce-eth_broadcast_addr.patch
+	patches.drivers/sfc-0124-sfc-Add-support-for-Solarflare-SFC9100-family.patch
 
 	########################################################
 	# Wireless Networking
