sfc: Expose NVRAM_PARTITION_TYPE_LICENSE on EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16103,6 +16103,7 @@
 	patches.drivers/sfc-0174-sfc-Log-all-unexpected-MCDI-errors.patch
 	patches.drivers/sfc-0175-sfc-Map-MCDI-error-MC_CMD_ERR_ENOTSUP-to-Linux-EOPNO.patch
 	patches.drivers/sfc-0176-sfc-Fold-efx_flush_all-into-efx_stop_port-and-update.patch
+	patches.drivers/sfc-0177-sfc-Expose-NVRAM_PARTITION_TYPE_LICENSE-on-EF10.patch
 
 	########################################################
 	# Wireless Networking
