--- a/series.conf
+++ b/series.conf
@@ -16039,6 +16039,7 @@
 	patches.drivers/sfc-0110-sfc-Remove-unnecessary-use-of-atomic_t.patch
 	patches.drivers/sfc-0111-sfc-Implement-asynchronous-MCDI-requests.patch
 	patches.drivers/sfc-0112-sfc-Document-conditions-for-multicast-replication-vs.patch
+	patches.drivers/sfc-0113-sfc-Allow-event-queue-initialisation-to-fail.patch
 
 	########################################################
 	# Wireless Networking
