--- a/series.conf
+++ b/series.conf
@@ -15946,6 +15946,7 @@
 	patches.drivers/sfc-0017-sfc-Wrap-__efx_rx_packet-with-efx_rx_flush_packet.patch
 	patches.drivers/sfc-0018-sfc-Replace-efx_rx_buf_eh-with-simpler-efx_rx_buf_va.patch
 	patches.drivers/sfc-0019-sfc-Explicitly-prefetch-RX-hash-prefix-not-just-Ethe.patch
+	patches.drivers/sfc-0020-sfc-Update-RX-buffer-address-together-with-length.patch
 
 	########################################################
 	# Wireless Networking
