sfc: Preserve rx_frm_trunc counters when resizing DMA rings (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16145,6 +16145,7 @@
 	patches.drivers/sfc-0216-sfc-Replace-TSOH_OFFSET-with-the-equivalent-NET_IP_A.patch
 	patches.drivers/sfc-0217-sfc-Remove-unused-definitions-of-EF10-user-mode-DMA-.patch
 	patches.drivers/sfc-0218-sfc-Correct-comment-about-number-of-TX-queues-used-o.patch
+	patches.drivers/sfc-0219-sfc-Preserve-rx_frm_trunc-counters-when-resizing-DMA.patch
 
 	########################################################
 	# Wireless Networking
