sfc: PIO:Restrict to 64bit arch and use 64-bit writes (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16160,6 +16160,7 @@
 	patches.drivers/sfc-0231-sfc-On-MCDI-timeout-issue-an-FLR-and-mark-MCDI-to-fa.patch
 	patches.drivers/sfc-0232-sfc-fix-calling-of-free_irq-with-already-free-vector.patch
 	patches.drivers/sfc-0233-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/sfc-0234-sfc-PIO-Restrict-to-64bit-arch-and-use-64-bit-writes.patch
 
 	########################################################
 	# Wireless Networking
