--- a/series.conf
+++ b/series.conf
@@ -15984,6 +15984,7 @@
 	patches.drivers/sfc-0055-sfc-Ensure-MCDI-buffers-but-not-lengths-are-dword-al.patch
 	patches.drivers/sfc-0056-sfc-Add-and-use-MCDI_SET_QWORD-and-MCDI_SET_ARRAY_QW.patch
 	patches.drivers/sfc-0057-sfc-Move-siena_reset_hw-and-siena_map_reset_reason-i.patch
+	patches.drivers/sfc-0058-sfc-Move-efx_mcdi_mac_reconfigure-to-siena.c-and-ren.patch
 
 	########################################################
 	# Wireless Networking
