--- a/series.conf
+++ b/series.conf
@@ -16075,6 +16075,7 @@
 	patches.drivers/sfc-0146-sfc-Remove-extern-from-function-prototypes.patch
 	patches.drivers/sfc-0147-sfc-Add-rmb-between-reading-stats-and-generation-cou.patch
 	patches.drivers/sfc-0148-sfc-Fix-internal-indices-of-ethtool-stats-for-EF10.patch
+	patches.drivers/sfc-0149-sfc-Refactor-EF10-stat-mask-code-to-allow-for-more-c.patch
 
 	########################################################
 	# Wireless Networking
