sfc: Remove dependency of PTP on having a dedicated channel (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16106,6 +16106,7 @@
 	patches.drivers/sfc-0177-sfc-Expose-NVRAM_PARTITION_TYPE_LICENSE-on-EF10.patch
 	patches.drivers/sfc-0178-sfc-Return-EBUSY-for-filter-insertion-on-EF10-matchi.patch
 	patches.drivers/sfc-0179-sfc-Split-PTP-multicast-filter-insertion-removal-out.patch
+	patches.drivers/sfc-0180-sfc-Remove-dependency-of-PTP-on-having-a-dedicated-c.patch
 
 	########################################################
 	# Wireless Networking
