sfc: Correct RX dropped count for drops while interface is down (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16096,6 +16096,7 @@
 	patches.drivers/sfc-0167-sfc-Add-MC-BISTs-to-ethtool-offline-self-test-on-EF1.patch
 	patches.drivers/sfc-0168-sfc-Tighten-the-check-for-RX-merged-completion-event.patch
 	patches.drivers/sfc-0169-sfc-Make-initial-fill-of-RX-descriptors-synchronous.patch
+	patches.drivers/sfc-0170-sfc-Correct-RX-dropped-count-for-drops-while-interfa.patch
 
 	########################################################
 	# Wireless Networking
