sfc: Associate primary and secondary functions of controller (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16118,6 +16118,7 @@
 	patches.drivers/sfc-0189-sfc-Copy-RX-prefix-into-skb-head-area-in-efx_rx_mk_s.patch
 	patches.drivers/sfc-0190-sfc-Add-RX-packet-timestamping-for-EF10.patch
 	patches.drivers/sfc-0191-sfc-Store-VPD-serial-number-at-probe-time.patch
+	patches.drivers/sfc-0192-sfc-Associate-primary-and-secondary-functions-of-con.patch
 
 	########################################################
 	# Wireless Networking
