sfc: Eliminate struct efx_mtd (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16018,6 +16018,7 @@
 	patches.drivers/sfc-0089-sfc-Define-and-use-MCDI_POPULATE_DWORD_-1-2-3-4-5-6-.patch
 	patches.drivers/sfc-0090-sfc-Cleanup-Falcon-arch-simple-MAC-filter-state.patch
 	patches.drivers/sfc-0091-sfc-Rename-SPI-stuff-to-show-that-it-is-Falcon-speci.patch
+	patches.drivers/sfc-0092-sfc-Eliminate-struct-efx_mtd.patch
 
 	########################################################
 	# Wireless Networking
