sfc: Do not assume efx_nic_type::ev_fini is idempotent (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16005,6 +16005,7 @@
 	patches.drivers/sfc-0076-sfc-Update-and-improve-kernel-doc-for-efx_mcdi_state.patch
 	patches.drivers/sfc-0077-sfc-Get-rid-of-per-NIC-type-phys_addr_channels-and-m.patch
 	patches.drivers/sfc-0078-sfc-EFX_WORKAROUND_ALWAYS-is-really-specific-to-Falc.patch
+	patches.drivers/sfc-0079-sfc-Do-not-assume-efx_nic_type-ev_fini-is-idempotent.patch
 
 	########################################################
 	# Wireless Networking
