--- a/series.conf
+++ b/series.conf
@@ -16162,6 +16162,7 @@
 	patches.drivers/sfc-0233-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/sfc-0234-sfc-PIO-Restrict-to-64bit-arch-and-use-64-bit-writes.patch
 	patches.drivers/sfc-0235-sfc-Adding-PCI-ID-for-Solarflare-7000-series-40G-net.patch
+	patches.drivers/sfc-0236-sfc-Add-40G-link-capability-decoding.patch
 
 	########################################################
 	# Wireless Networking
