--- a/series.conf
+++ b/series.conf
@@ -16117,6 +16117,7 @@
 	patches.drivers/sfc-0188-sfc-split-setup-of-hardware-timestamping-into-NIC-ty.patch
 	patches.drivers/sfc-0189-sfc-Copy-RX-prefix-into-skb-head-area-in-efx_rx_mk_s.patch
 	patches.drivers/sfc-0190-sfc-Add-RX-packet-timestamping-for-EF10.patch
+	patches.drivers/sfc-0191-sfc-Store-VPD-serial-number-at-probe-time.patch
 
 	########################################################
 	# Wireless Networking
