sfc: Fix lookup of default RX MAC filters when steered using ethtool (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15971,6 +15971,7 @@
 	patches.drivers/sfc-0042-sfc-Fix-IRQ-cleanup-in-case-of-a-probe-failure.patch
 	patches.drivers/sfc-0043-sfc-Fix-memory-leak-when-discarding-scattered-packet.patch
 	patches.drivers/sfc-0044-sfc-Enable-RX-scatter-for-flows-steered-by-RFS.patch
+	patches.drivers/sfc-0045-sfc-Fix-lookup-of-default-RX-MAC-filters-when-steere.patch
 
 	########################################################
 	# Wireless Networking
