--- a/series.conf
+++ b/series.conf
@@ -16011,6 +16011,7 @@
 	patches.drivers/sfc-0082-sfc-Name-the-RX-drop-queue-ID.patch
 	patches.drivers/sfc-0083-sfc-Extend-and-abstract-efx_filter_spec-to-cover-Hun.patch
 	patches.drivers/sfc-0084-sfc-Split-Falcon-arch-specific-and-common-filter-sta.patch
+	patches.drivers/sfc-0085-sfc-Refactor-Falcon-arch-search-limit-reset.patch
 
 	########################################################
 	# Wireless Networking
