--- a/series.conf
+++ b/series.conf
@@ -16007,6 +16007,7 @@
 	patches.drivers/sfc-0078-sfc-EFX_WORKAROUND_ALWAYS-is-really-specific-to-Falc.patch
 	patches.drivers/sfc-0079-sfc-Do-not-assume-efx_nic_type-ev_fini-is-idempotent.patch
 	patches.drivers/sfc-0080-sfc-Remove-unused-filter_flags-variables-and-efx_far.patch
+	patches.drivers/sfc-0081-sfc-Rename-Falcon-arch-filter-implementation-types-a.patch
 
 	########################################################
 	# Wireless Networking
