--- a/series.conf
+++ b/series.conf
@@ -16133,6 +16133,7 @@
 	patches.drivers/sfc-0204-sfc-Changed-the-statistic-name-emerg_-fetch-wait-to-.patch
 	patches.drivers/sfc-0205-sfc-Add-PTP-counters-to-ethtool-stats.patch
 	patches.drivers/sfc-0206-sfc-Fix-RX-drop-filters-for-EF10.patch
+	patches.drivers/sfc-0207-net-sfc-calls-skb_set_hash.patch
 
 	########################################################
 	# Wireless Networking
