--- a/series.conf
+++ b/series.conf
@@ -15996,6 +15996,7 @@
 	patches.drivers/sfc-0067-sfc-Limit-scope-of-a-Falcon-A1-IRQ-workaround.patch
 	patches.drivers/sfc-0068-sfc-Stop-RX-refill-before-flushing-RX-queues.patch
 	patches.drivers/sfc-0069-sfc-Remove-bogus-call-to-efx_release_tx_buffers.patch
+	patches.drivers/sfc-0070-sfc-Refactor-queue-teardown-sequence-to-allow-for-EF.patch
 
 	########################################################
 	# Wireless Networking
