sfc: Remove early call to efx_nic_type::reconfigure_mac in efx_reset_up() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16028,6 +16028,7 @@
 	patches.drivers/sfc-0099-sfc-Add-a-function-pointer-to-abstract-write-of-host.patch
 	patches.drivers/sfc-0100-sfc-Add-EF10-support-for-TX-RX-DMA-error-events-hand.patch
 	patches.drivers/sfc-0101-sfc-use-MCDI-epoch-flag-to-improve-MC-reboot-detecti.patch
+	patches.drivers/sfc-0102-sfc-Remove-early-call-to-efx_nic_type-reconfigure_ma.patch
 
 	########################################################
 	# Wireless Networking
