sfc: Enable PTP clock and timestamping for all functions on EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16119,6 +16119,7 @@
 	patches.drivers/sfc-0190-sfc-Add-RX-packet-timestamping-for-EF10.patch
 	patches.drivers/sfc-0191-sfc-Store-VPD-serial-number-at-probe-time.patch
 	patches.drivers/sfc-0192-sfc-Associate-primary-and-secondary-functions-of-con.patch
+	patches.drivers/sfc-0193-sfc-Enable-PTP-clock-and-timestamping-for-all-functi.patch
 
 	########################################################
 	# Wireless Networking
