sfc: Document current usage of efx_rx_buffer::len and efx_nic::rx_buffer_len (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15940,6 +15940,7 @@
 	patches.drivers/sfc-0011-sfc-Fix-replacement-detection-in-efx_filter_insert_f.patch
 	patches.drivers/sfc-0012-sfc-Disable-RSS-when-using-SR-IOV-and-only-1-RX-queu.patch
 	patches.drivers/sfc-0013-sfc-Add-AER-and-EEH-support-for-Siena.patch
+	patches.drivers/sfc-0014-sfc-Document-current-usage-of-efx_rx_buffer-len-and-.patch
 
 	########################################################
 	# Wireless Networking
