sfc: Refactor efx_mcdi_rpc_start() and efx_mcdi_copyin() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16035,6 +16035,7 @@
 	patches.drivers/sfc-0106-sfc-Return-an-error-code-when-a-sensor-is-busy.patch
 	patches.drivers/sfc-0107-sfc-Use-extended-MC_CMD_SENSOR_INFO-and-MC_CMD_READ_.patch
 	patches.drivers/sfc-0108-sfc-Add-support-for-new-board-sensors.patch
+	patches.drivers/sfc-0109-sfc-Refactor-efx_mcdi_rpc_start-and-efx_mcdi_copyin.patch
 
 	########################################################
 	# Wireless Networking
