sfc: RX buffer allocation takes prefix size into account in IP header alignment (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16087,6 +16087,7 @@
 	patches.drivers/sfc-0158-sfc-Rate-limit-log-message-for-PTP-packets-without-a.patch
 	patches.drivers/sfc-0159-sfc-Stop-re-start-PTP-when-stopping-starting-the-dat.patch
 	patches.drivers/sfc-0160-sfc-Maintain-current-frequency-adjustment-when-apply.patch
+	patches.drivers/sfc-0161-sfc-RX-buffer-allocation-takes-prefix-size-into-acco.patch
 
 	########################################################
 	# Wireless Networking
