sfc: Remove unused definitions of EF10 user-mode DMA descriptors (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16143,6 +16143,7 @@
 	patches.drivers/sfc-0214-sfc-Cache-skb-data-in-local-variable-in-efx_ptp_rx.patch
 	patches.drivers/sfc-0215-sfc-Rewrite-adjustment-of-PPS-event-in-a-clearer-way.patch
 	patches.drivers/sfc-0216-sfc-Replace-TSOH_OFFSET-with-the-equivalent-NET_IP_A.patch
+	patches.drivers/sfc-0217-sfc-Remove-unused-definitions-of-EF10-user-mode-DMA-.patch
 
 	########################################################
 	# Wireless Networking
