sfc: Wait for MC reboot to complete before scheduling driver reset (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16059,6 +16059,7 @@
 	patches.drivers/sfc-0130-sfc-Reset-derived-rx_bad_bytes-statistic-when-EF10-M.patch
 	patches.drivers/sfc-0131-sfc-Clean-up-validation-of-datapath-capabilities.patch
 	patches.drivers/sfc-0132-sfc-Reinitialise-and-re-validate-datapath-caps-after.patch
+	patches.drivers/sfc-0133-sfc-Wait-for-MC-reboot-to-complete-before-scheduling.patch
 
 	########################################################
 	# Wireless Networking
