sfc: fix addr_list_lock spinlock use before init (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16168,6 +16168,7 @@
 	patches.drivers/sfc-0239-sfc-Use-__iowrite64_copy-instead-of-a-slightly-diffe.patch
 	patches.drivers/sfc-0240-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/sfc-0241-sfc-Convert-the-normal-transmit-complete-path-to-dev.patch
+	patches.drivers/sfc-0242-sfc-fix-addr_list_lock-spinlock-use-before-init.patch
 
 	########################################################
 	# Wireless Networking
