sfc: Extend and abstract efx_filter_spec to cover Huntington/EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16009,6 +16009,7 @@
 	patches.drivers/sfc-0080-sfc-Remove-unused-filter_flags-variables-and-efx_far.patch
 	patches.drivers/sfc-0081-sfc-Rename-Falcon-arch-filter-implementation-types-a.patch
 	patches.drivers/sfc-0082-sfc-Name-the-RX-drop-queue-ID.patch
+	patches.drivers/sfc-0083-sfc-Extend-and-abstract-efx_filter_spec-to-cover-Hun.patch
 
 	########################################################
 	# Wireless Networking
