sfc: const-qualify source pointers for MMIO write functions (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15972,6 +15972,7 @@
 	patches.drivers/sfc-0043-sfc-Fix-memory-leak-when-discarding-scattered-packet.patch
 	patches.drivers/sfc-0044-sfc-Enable-RX-scatter-for-flows-steered-by-RFS.patch
 	patches.drivers/sfc-0045-sfc-Fix-lookup-of-default-RX-MAC-filters-when-steere.patch
+	patches.drivers/sfc-0046-sfc-const-qualify-source-pointers-for-MMIO-write-fun.patch
 
 	########################################################
 	# Wireless Networking
