sfc: Fix Kconfig typo "----help---" (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15955,6 +15955,7 @@
 	patches.drivers/sfc-0026-sfc-remove-duplicated-include-from-efx.c.patch
 	patches.drivers/sfc-0027-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
 	patches.drivers/sfc-0028-sfc-make-local-functions-static.patch
+	patches.drivers/sfc-0029-sfc-Fix-Kconfig-typo-help.patch
 
 	########################################################
 	# Wireless Networking
