sfc: Adding PCI ID for Solarflare 7000 series 40G network adapter (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16161,6 +16161,7 @@
 	patches.drivers/sfc-0232-sfc-fix-calling-of-free_irq-with-already-free-vector.patch
 	patches.drivers/sfc-0233-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/sfc-0234-sfc-PIO-Restrict-to-64bit-arch-and-use-64-bit-writes.patch
+	patches.drivers/sfc-0235-sfc-Adding-PCI-ID-for-Solarflare-7000-series-40G-net.patch
 
 	########################################################
 	# Wireless Networking
