--- a/series.conf
+++ b/series.conf
@@ -16036,6 +16036,7 @@
 	patches.drivers/sfc-0107-sfc-Use-extended-MC_CMD_SENSOR_INFO-and-MC_CMD_READ_.patch
 	patches.drivers/sfc-0108-sfc-Add-support-for-new-board-sensors.patch
 	patches.drivers/sfc-0109-sfc-Refactor-efx_mcdi_rpc_start-and-efx_mcdi_copyin.patch
+	patches.drivers/sfc-0110-sfc-Remove-unnecessary-use-of-atomic_t.patch
 
 	########################################################
 	# Wireless Networking
