drivers/net/ethernet/sfc: use standard __{clear,set}_bit_le() functions (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15926,6 +15926,9 @@
 	patches.drivers/i40evf-0143-i40e-i40evf-Ignore-a-driver-perceived-Tx-hang-if-the.patch
 	patches.drivers/i40evf-0144-i40e-i40evf-Bump-i40e-i40evf-versions.patch
 
+	# sfc SP4 update (bsc#909618 FATE#317521)
+	patches.drivers/sfc-0001-drivers-net-ethernet-sfc-use-standard-__-clear-set-_.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
