--- a/series.conf
+++ b/series.conf
@@ -16137,6 +16137,7 @@
 	patches.drivers/sfc-0208-sfc-fix-sparse-non-static-symbol-warning.patch
 	patches.drivers/sfc-0209-sfc-Change-efx_mcdi_reset_port-to-use-ENTITY_RESET-M.patch
 	patches.drivers/sfc-0210-sfc-Fix-transposed-ptp_-under-over-size_sync_windows.patch
+	patches.drivers/sfc-0211-sfc-Use-the-correct-maximum-TX-DMA-ring-size-for-SFC.patch
 
 	########################################################
 	# Wireless Networking
