sfc: Add AER and EEH support for Siena (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15939,6 +15939,7 @@
 	patches.drivers/sfc-0010-sfc-Merge-efx_filter_search-into-efx_filter_insert.patch
 	patches.drivers/sfc-0011-sfc-Fix-replacement-detection-in-efx_filter_insert_f.patch
 	patches.drivers/sfc-0012-sfc-Disable-RSS-when-using-SR-IOV-and-only-1-RX-queu.patch
+	patches.drivers/sfc-0013-sfc-Add-AER-and-EEH-support-for-Siena.patch
 
 	########################################################
 	# Wireless Networking
