sfc: Move MTD operations into efx_nic_type (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16020,6 +16020,7 @@
 	patches.drivers/sfc-0091-sfc-Rename-SPI-stuff-to-show-that-it-is-Falcon-speci.patch
 	patches.drivers/sfc-0092-sfc-Eliminate-struct-efx_mtd.patch
 	patches.drivers/sfc-0093-sfc-Move-NIC-type-specific-MTD-partition-date-into-s.patch
+	patches.drivers/sfc-0094-sfc-Move-MTD-operations-into-efx_nic_type.patch
 
 	########################################################
 	# Wireless Networking
