sfc: Support ARFS for IPv6 flows (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16070,6 +16070,7 @@
 	patches.drivers/sfc-0141-sfc-Separate-out-queue-empty-check-from-efx_nic_may_.patch
 	patches.drivers/sfc-0142-sfc-Introduce-inline-functions-to-simplify-TX-insert.patch
 	patches.drivers/sfc-0143-sfc-Use-TX-PIO-for-sufficiently-small-packets.patch
+	patches.drivers/sfc-0144-sfc-Support-ARFS-for-IPv6-flows.patch
 
 	########################################################
 	# Wireless Networking
