sfc: Add and use MCDI_SET_QWORD() and MCDI_SET_ARRAY_QWORD() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15982,6 +15982,7 @@
 	patches.drivers/sfc-0053-sfc-Introduce-and-use-MCDI_CTL_SDU_LEN_MAX_V1-macro-.patch
 	patches.drivers/sfc-0054-sfc-Use-proper-macros-to-declare-and-access-MCDI-arr.patch
 	patches.drivers/sfc-0055-sfc-Ensure-MCDI-buffers-but-not-lengths-are-dword-al.patch
+	patches.drivers/sfc-0056-sfc-Add-and-use-MCDI_SET_QWORD-and-MCDI_SET_ARRAY_QW.patch
 
 	########################################################
 	# Wireless Networking
