sfc: Fix replacement detection in efx_filter_insert_filter() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15937,6 +15937,7 @@
 	patches.drivers/sfc-0008-sfc-Remove-redundant-parameter-to-efx_filter_search.patch
 	patches.drivers/sfc-0009-sfc-Don-t-use-efx_filter_-build-hash-increment-for-d.patch
 	patches.drivers/sfc-0010-sfc-Merge-efx_filter_search-into-efx_filter_insert.patch
+	patches.drivers/sfc-0011-sfc-Fix-replacement-detection-in-efx_filter_insert_f.patch
 
 	########################################################
 	# Wireless Networking
