--- a/series.conf
+++ b/series.conf
@@ -16067,6 +16067,7 @@
 	patches.drivers/sfc-0138-sfc-Fold-tso_get_head_fragment-into-tso_start.patch
 	patches.drivers/sfc-0139-sfc-Implement-firmware-assisted-TSO-for-EF10.patch
 	patches.drivers/sfc-0140-sfc-Allocate-and-link-PIO-buffers-map-them-with-writ.patch
+	patches.drivers/sfc-0141-sfc-Separate-out-queue-empty-check-from-efx_nic_may_.patch
 
 	########################################################
 	# Wireless Networking
