--- a/series.conf
+++ b/series.conf
@@ -15936,6 +15936,7 @@
 	patches.drivers/sfc-0007-sfc-More-sensible-semantics-for-efx_filter_insert_fi.patch
 	patches.drivers/sfc-0008-sfc-Remove-redundant-parameter-to-efx_filter_search.patch
 	patches.drivers/sfc-0009-sfc-Don-t-use-efx_filter_-build-hash-increment-for-d.patch
+	patches.drivers/sfc-0010-sfc-Merge-efx_filter_search-into-efx_filter_insert.patch
 
 	########################################################
 	# Wireless Networking
