sfc: Change efx_mcdi_reset_port to use ENTITY_RESET MC command (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16135,6 +16135,7 @@
 	patches.drivers/sfc-0206-sfc-Fix-RX-drop-filters-for-EF10.patch
 	patches.drivers/sfc-0207-net-sfc-calls-skb_set_hash.patch
 	patches.drivers/sfc-0208-sfc-fix-sparse-non-static-symbol-warning.patch
+	patches.drivers/sfc-0209-sfc-Change-efx_mcdi_reset_port-to-use-ENTITY_RESET-M.patch
 
 	########################################################
 	# Wireless Networking
