--- a/series.conf
+++ b/series.conf
@@ -15938,6 +15938,7 @@
 	patches.drivers/sfc-0009-sfc-Don-t-use-efx_filter_-build-hash-increment-for-d.patch
 	patches.drivers/sfc-0010-sfc-Merge-efx_filter_search-into-efx_filter_insert.patch
 	patches.drivers/sfc-0011-sfc-Fix-replacement-detection-in-efx_filter_insert_f.patch
+	patches.drivers/sfc-0012-sfc-Disable-RSS-when-using-SR-IOV-and-only-1-RX-queu.patch
 
 	########################################################
 	# Wireless Networking
