sfc: Allow efx_channel_type::receive_skb() to reject a packet (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15929,6 +15929,7 @@
 	# sfc SP4 update (bsc#909618 FATE#317521)
 	patches.drivers/sfc-0001-drivers-net-ethernet-sfc-use-standard-__-clear-set-_.patch
 	patches.drivers/sfc-0002-sfc-remove-__dev-attributes.patch
+	patches.drivers/sfc-0003-sfc-Allow-efx_channel_type-receive_skb-to-reject-a-p.patch
 
 	########################################################
 	# Wireless Networking
