sfc: Use efx_mcdi_mon() to find efx_mcdi_mon structure from efx_nic (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15973,6 +15973,7 @@
 	patches.drivers/sfc-0044-sfc-Enable-RX-scatter-for-flows-steered-by-RFS.patch
 	patches.drivers/sfc-0045-sfc-Fix-lookup-of-default-RX-MAC-filters-when-steere.patch
 	patches.drivers/sfc-0046-sfc-const-qualify-source-pointers-for-MMIO-write-fun.patch
+	patches.drivers/sfc-0047-sfc-Use-efx_mcdi_mon-to-find-efx_mcdi_mon-structure-.patch
 
 	########################################################
 	# Wireless Networking
