--- a/series.conf
+++ b/series.conf
@@ -16046,6 +16046,7 @@
 	patches.drivers/sfc-0117-sfc-Use-a-global-count-of-active-queues-instead-of-p.patch
 	patches.drivers/sfc-0118-sfc-Extend-struct-efx_tx_buffer-to-allow-pushing-opt.patch
 	patches.drivers/sfc-0119-sfc-Add-EF10-register-and-structure-definitions.patch
+	patches.drivers/sfc-0120-sfc-Allocate-NVRAM-partition-ID-range-for-PHY-images.patch
 
 	########################################################
 	# Wireless Networking
