--- a/series.conf
+++ b/series.conf
@@ -15998,6 +15998,7 @@
 	patches.drivers/sfc-0069-sfc-Remove-bogus-call-to-efx_release_tx_buffers.patch
 	patches.drivers/sfc-0070-sfc-Refactor-queue-teardown-sequence-to-allow-for-EF.patch
 	patches.drivers/sfc-0071-sfc-Move-and-rename-Falcon-Siena-common-NIC-operatio.patch
+	patches.drivers/sfc-0072-sfc-Translate-MCDI-error-numbers-received-in-events.patch
 
 	########################################################
 	# Wireless Networking
