drivers:net: dma_alloc_coherent: use __GFP_ZERO instead of memset(, 0) (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15953,6 +15953,7 @@
 	patches.drivers/sfc-0024-sfc-Replace-efx_rx_is_last_buffer-with-a-flag.patch
 	patches.drivers/sfc-0025-sfc-allocate-more-RX-buffers-per-page.patch
 	patches.drivers/sfc-0026-sfc-remove-duplicated-include-from-efx.c.patch
+	patches.drivers/sfc-0027-drivers-net-dma_alloc_coherent-use-__GFP_ZERO-instea.patch
 
 	########################################################
 	# Wireless Networking
