sfc: Initialise IRQ moderation for all NIC types from efx_init_eventq() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16041,6 +16041,7 @@
 	patches.drivers/sfc-0112-sfc-Document-conditions-for-multicast-replication-vs.patch
 	patches.drivers/sfc-0113-sfc-Allow-event-queue-initialisation-to-fail.patch
 	patches.drivers/sfc-0114-sfc-Allow-efx_nic_type-dimension_resources-to-fail.patch
+	patches.drivers/sfc-0115-sfc-Initialise-IRQ-moderation-for-all-NIC-types-from.patch
 
 	########################################################
 	# Wireless Networking
