--- a/series.conf
+++ b/series.conf
@@ -16042,6 +16042,7 @@
 	patches.drivers/sfc-0113-sfc-Allow-event-queue-initialisation-to-fail.patch
 	patches.drivers/sfc-0114-sfc-Allow-efx_nic_type-dimension_resources-to-fail.patch
 	patches.drivers/sfc-0115-sfc-Initialise-IRQ-moderation-for-all-NIC-types-from.patch
+	patches.drivers/sfc-0116-sfc-Prepare-for-RX-scatter-on-EF10.patch
 
 	########################################################
 	# Wireless Networking
