sfc: Introduce and use MCDI_DECLARE_BUF macro (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15976,6 +15976,7 @@
 	patches.drivers/sfc-0047-sfc-Use-efx_mcdi_mon-to-find-efx_mcdi_mon-structure-.patch
 	patches.drivers/sfc-0048-sfc-Move-details-of-a-Falcon-bug-workaround-out-of-e.patch
 	patches.drivers/sfc-0049-sfc-Move-more-Falcon-specific-code-and-definitions-i.patch
+	patches.drivers/sfc-0050-sfc-Introduce-and-use-MCDI_DECLARE_BUF-macro.patch
 
 	########################################################
 	# Wireless Networking
