sfc: Initialise efx_ptp_data::phc_clock_info from a static template (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16109,6 +16109,7 @@
 	patches.drivers/sfc-0180-sfc-Remove-dependency-of-PTP-on-having-a-dedicated-c.patch
 	patches.drivers/sfc-0181-sfc-Store-flags-from-MC_CMD_DRV_ATTACH-for-later-use.patch
 	patches.drivers/sfc-0182-sfc-Do-not-use-MAC-address-as-clock-name.patch
+	patches.drivers/sfc-0183-sfc-Initialise-efx_ptp_data-phc_clock_info-from-a-st.patch
 
 	########################################################
 	# Wireless Networking
