DMA-API: net: sfc/efx.c: replace dma_set_mask()+dma_set_coherent_mask() with new helper (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16071,6 +16071,7 @@
 	patches.drivers/sfc-0142-sfc-Introduce-inline-functions-to-simplify-TX-insert.patch
 	patches.drivers/sfc-0143-sfc-Use-TX-PIO-for-sufficiently-small-packets.patch
 	patches.drivers/sfc-0144-sfc-Support-ARFS-for-IPv6-flows.patch
+	patches.drivers/sfc-0145-DMA-API-net-sfc-efx.c-replace-dma_set_mask-dma_set_c.patch
 
 	########################################################
 	# Wireless Networking
