--- a/series.conf
+++ b/series.conf
@@ -16024,6 +16024,7 @@
 	patches.drivers/sfc-0095-sfc-Remove-more-left-overs-from-Falcon-GMAC-support.patch
 	patches.drivers/sfc-0096-sfc-Remove-driver-local-struct-ethtool_string.patch
 	patches.drivers/sfc-0097-sfc-Delegate-MAC-NIC-statistic-description-to-efx_ni.patch
+	patches.drivers/sfc-0098-sfc-PTP-MCDI-requests-need-to-initialise-periph-ID-f.patch
 
 	########################################################
 	# Wireless Networking
