sfc: Don't clear timestamps in efx_ptp_rx() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16120,6 +16120,7 @@
 	patches.drivers/sfc-0191-sfc-Store-VPD-serial-number-at-probe-time.patch
 	patches.drivers/sfc-0192-sfc-Associate-primary-and-secondary-functions-of-con.patch
 	patches.drivers/sfc-0193-sfc-Enable-PTP-clock-and-timestamping-for-all-functi.patch
+	patches.drivers/sfc-0194-sfc-Don-t-clear-timestamps-in-efx_ptp_rx.patch
 
 	########################################################
 	# Wireless Networking
