sfc: Limit scope of a Falcon A1 IRQ workaround (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15993,6 +15993,7 @@
 	patches.drivers/sfc-0064-sfc-Rename-Falcon-architecture-register-definitions.patch
 	patches.drivers/sfc-0065-sfc-Remove-efx_process_channel_now.patch
 	patches.drivers/sfc-0066-sfc-Rework-IRQ-enable-disable.patch
+	patches.drivers/sfc-0067-sfc-Limit-scope-of-a-Falcon-A1-IRQ-workaround.patch
 
 	########################################################
 	# Wireless Networking
