sfc: Name the RX drop queue ID (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16008,6 +16008,7 @@
 	patches.drivers/sfc-0079-sfc-Do-not-assume-efx_nic_type-ev_fini-is-idempotent.patch
 	patches.drivers/sfc-0080-sfc-Remove-unused-filter_flags-variables-and-efx_far.patch
 	patches.drivers/sfc-0081-sfc-Rename-Falcon-arch-filter-implementation-types-a.patch
+	patches.drivers/sfc-0082-sfc-Name-the-RX-drop-queue-ID.patch
 
 	########################################################
 	# Wireless Networking
