--- a/series.conf
+++ b/series.conf
@@ -15931,6 +15931,7 @@
 	patches.drivers/sfc-0002-sfc-remove-__dev-attributes.patch
 	patches.drivers/sfc-0003-sfc-Allow-efx_channel_type-receive_skb-to-reject-a-p.patch
 	patches.drivers/sfc-0004-sfc-PTP-changes-to-support-improved-UUID-filtering-m.patch
+	patches.drivers/sfc-0005-sfc-tidy-up-PTP-synchronize-function-efx_ptp_process.patch
 
 	########################################################
 	# Wireless Networking
