sfc: Refactor efx_mcdi_poll() by introducing efx_mcdi_poll_once() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16088,6 +16088,7 @@
 	patches.drivers/sfc-0159-sfc-Stop-re-start-PTP-when-stopping-starting-the-dat.patch
 	patches.drivers/sfc-0160-sfc-Maintain-current-frequency-adjustment-when-apply.patch
 	patches.drivers/sfc-0161-sfc-RX-buffer-allocation-takes-prefix-size-into-acco.patch
+	patches.drivers/sfc-0162-sfc-Refactor-efx_mcdi_poll-by-introducing-efx_mcdi_p.patch
 
 	########################################################
 	# Wireless Networking
