--- a/series.conf
+++ b/series.conf
@@ -15985,6 +15985,7 @@
 	patches.drivers/sfc-0056-sfc-Add-and-use-MCDI_SET_QWORD-and-MCDI_SET_ARRAY_QW.patch
 	patches.drivers/sfc-0057-sfc-Move-siena_reset_hw-and-siena_map_reset_reason-i.patch
 	patches.drivers/sfc-0058-sfc-Move-efx_mcdi_mac_reconfigure-to-siena.c-and-ren.patch
+	patches.drivers/sfc-0059-sfc-Collect-all-MCDI-port-functions-into-mcdi_port.c.patch
 
 	########################################################
 	# Wireless Networking
