sfc: Use canonical pointer type for MAC address in efx_set_mac_address() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16147,6 +16147,7 @@
 	patches.drivers/sfc-0218-sfc-Correct-comment-about-number-of-TX-queues-used-o.patch
 	patches.drivers/sfc-0219-sfc-Preserve-rx_frm_trunc-counters-when-resizing-DMA.patch
 	patches.drivers/sfc-0220-sfc-Rename-use_options-variable-in-tso_start-to-clea.patch
+	patches.drivers/sfc-0221-sfc-Use-canonical-pointer-type-for-MAC-address-in-ef.patch
 
 	########################################################
 	# Wireless Networking
