sfc: Make efx_mcdi_init() call efx_mcdi_handle_assertion() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15986,6 +15986,7 @@
 	patches.drivers/sfc-0057-sfc-Move-siena_reset_hw-and-siena_map_reset_reason-i.patch
 	patches.drivers/sfc-0058-sfc-Move-efx_mcdi_mac_reconfigure-to-siena.c-and-ren.patch
 	patches.drivers/sfc-0059-sfc-Collect-all-MCDI-port-functions-into-mcdi_port.c.patch
+	patches.drivers/sfc-0060-sfc-Make-efx_mcdi_init-call-efx_mcdi_handle_assertio.patch
 
 	########################################################
 	# Wireless Networking
