drivers:net: Convert dma_alloc_coherent(...__GFP_ZERO) to dma_zalloc_coherent (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16052,6 +16052,7 @@
 	patches.fixes/etherdevice-introduce-eth_broadcast_addr.patch
 	patches.drivers/sfc-0124-sfc-Add-support-for-Solarflare-SFC9100-family.patch
 	patches.drivers/sfc-0125-sfc-Update-copyright-banners.patch
+	patches.drivers/sfc-0126-drivers-net-Convert-dma_alloc_coherent-.__GFP_ZERO-t.patch
 
 	########################################################
 	# Wireless Networking
