sfc: Add EF10 register and structure definitions (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16045,6 +16045,7 @@
 	patches.drivers/sfc-0116-sfc-Prepare-for-RX-scatter-on-EF10.patch
 	patches.drivers/sfc-0117-sfc-Use-a-global-count-of-active-queues-instead-of-p.patch
 	patches.drivers/sfc-0118-sfc-Extend-struct-efx_tx_buffer-to-allow-pushing-opt.patch
+	patches.drivers/sfc-0119-sfc-Add-EF10-register-and-structure-definitions.patch
 
 	########################################################
 	# Wireless Networking
