--- a/series.conf
+++ b/series.conf
@@ -16149,6 +16149,7 @@
 	patches.drivers/sfc-0220-sfc-Rename-use_options-variable-in-tso_start-to-clea.patch
 	patches.drivers/sfc-0221-sfc-Use-canonical-pointer-type-for-MAC-address-in-ef.patch
 	patches.drivers/sfc-0222-sfc-Update-product-naming.patch
+	patches.drivers/sfc-0223-sfc-Cosmetic-changes-to-self-test-from-the-out-of-tr.patch
 
 	########################################################
 	# Wireless Networking
