sfc: Allocate and link PIO buffers; map them with write-combining (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16066,6 +16066,7 @@
 	patches.drivers/sfc-0137-sfc-Add-EF10-registers-to-register-dump.patch
 	patches.drivers/sfc-0138-sfc-Fold-tso_get_head_fragment-into-tso_start.patch
 	patches.drivers/sfc-0139-sfc-Implement-firmware-assisted-TSO-for-EF10.patch
+	patches.drivers/sfc-0140-sfc-Allocate-and-link-PIO-buffers-map-them-with-writ.patch
 
 	########################################################
 	# Wireless Networking
