sfc: Implement firmware-assisted TSO for EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16065,6 +16065,7 @@
 	patches.drivers/sfc-0136-sfc-efx_ef10_filter_update_rx_scatter-can-be-static.patch
 	patches.drivers/sfc-0137-sfc-Add-EF10-registers-to-register-dump.patch
 	patches.drivers/sfc-0138-sfc-Fold-tso_get_head_fragment-into-tso_start.patch
+	patches.drivers/sfc-0139-sfc-Implement-firmware-assisted-TSO-for-EF10.patch
 
 	########################################################
 	# Wireless Networking
