sfc: Only bind to EF10 functions with the LinkCtrl and Trusted flags (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16078,6 +16078,7 @@
 	patches.drivers/sfc-0149-sfc-Refactor-EF10-stat-mask-code-to-allow-for-more-c.patch
 	patches.drivers/sfc-0150-sfc-Add-definitions-for-new-stats-counters-and-capab.patch
 	patches.drivers/sfc-0151-sfc-Add-PM-and-RXDP-drop-counters-to-ethtool-stats.patch
+	patches.drivers/sfc-0152-sfc-Only-bind-to-EF10-functions-with-the-LinkCtrl-an.patch
 
 	########################################################
 	# Wireless Networking
