sfc: Implement efx_nic_type::filter_clear_rx operation for EF10 (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16127,6 +16127,7 @@
 	patches.drivers/sfc-0198-sfc-Change-priority-and-flags-for-automatic-MAC-filt.patch
 	patches.drivers/sfc-0199-sfc-Don-t-refer-to-stack-in-filter-implementation.patch
 	patches.drivers/sfc-0200-sfc-Allow-filter-removal-only-with-exactly-matching-.patch
+	patches.drivers/sfc-0201-sfc-Implement-efx_nic_type-filter_clear_rx-operation.patch
 
 	########################################################
 	# Wireless Networking
