sfc: check for NULL efx->ptp_data in efx_ptp_event (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16153,6 +16153,7 @@
 	patches.drivers/sfc-0224-sfc-Fail-self-test-with-EBUSY-not-EIO-if-the-device-.patch
 	patches.drivers/sfc-0225-sfc-Add-remove-blank-lines-to-taste.patch
 	patches.drivers/sfc-0226-sfc-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
+	patches.drivers/sfc-0227-sfc-check-for-NULL-efx-ptp_data-in-efx_ptp_event.patch
 
 	########################################################
 	# Wireless Networking
