sfc: Move more Falcon-specific code and definitions into falcon.c (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15975,6 +15975,7 @@
 	patches.drivers/sfc-0046-sfc-const-qualify-source-pointers-for-MMIO-write-fun.patch
 	patches.drivers/sfc-0047-sfc-Use-efx_mcdi_mon-to-find-efx_mcdi_mon-structure-.patch
 	patches.drivers/sfc-0048-sfc-Move-details-of-a-Falcon-bug-workaround-out-of-e.patch
+	patches.drivers/sfc-0049-sfc-Move-more-Falcon-specific-code-and-definitions-i.patch
 
 	########################################################
 	# Wireless Networking
