sfc: don't BUG_ON efx->max_channels == 0 in probe (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16170,6 +16170,7 @@
 	patches.drivers/sfc-0241-sfc-Convert-the-normal-transmit-complete-path-to-dev.patch
 	patches.drivers/sfc-0242-sfc-fix-addr_list_lock-spinlock-use-before-init.patch
 	patches.drivers/sfc-0243-sfc-remove-incorrect-EFX_BUG_ON_PARANOID-check.patch
+	patches.drivers/sfc-0244-sfc-don-t-BUG_ON-efx-max_channels-0-in-probe.patch
 
 	########################################################
 	# Wireless Networking
