sfc: Fix EEH with legacy interrupts (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15961,6 +15961,7 @@
 	patches.drivers/sfc-0032-sfc-Reduce-RX-scatter-buffer-size-and-reduce-alignme.patch
 	patches.drivers/sfc-0033-sfc-Store-port-number-in-private-data-not-net_device.patch
 	patches.drivers/sfc-0034-sfc-Remove-write-permission-from-phy_type-attribute.patch
+	patches.drivers/sfc-0035-sfc-Fix-EEH-with-legacy-interrupts.patch
 
 	########################################################
 	# Wireless Networking
