sfc: Add flag for stack-owned RX MAC filters (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16014,6 +16014,7 @@
 	patches.drivers/sfc-0085-sfc-Refactor-Falcon-arch-search-limit-reset.patch
 	patches.drivers/sfc-0086-sfc-Make-most-filter-operations-NIC-type-specific.patch
 	patches.drivers/sfc-0087-sfc-Refactor-Falcon-arch-filter-removal.patch
+	patches.drivers/sfc-0088-sfc-Add-flag-for-stack-owned-RX-MAC-filters.patch
 
 	########################################################
 	# Wireless Networking
