sfc: Remove bogus call to efx_release_tx_buffers() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -15995,6 +15995,7 @@
 	patches.drivers/sfc-0066-sfc-Rework-IRQ-enable-disable.patch
 	patches.drivers/sfc-0067-sfc-Limit-scope-of-a-Falcon-A1-IRQ-workaround.patch
 	patches.drivers/sfc-0068-sfc-Stop-RX-refill-before-flushing-RX-queues.patch
+	patches.drivers/sfc-0069-sfc-Remove-bogus-call-to-efx_release_tx_buffers.patch
 
 	########################################################
 	# Wireless Networking
