sfc: Use pci_enable_msix_range() instead of pci_enable_msix() (bsc#909618 FATE#317521).

--- a/series.conf
+++ b/series.conf
@@ -16152,6 +16152,7 @@
 	patches.drivers/sfc-0223-sfc-Cosmetic-changes-to-self-test-from-the-out-of-tr.patch
 	patches.drivers/sfc-0224-sfc-Fail-self-test-with-EBUSY-not-EIO-if-the-device-.patch
 	patches.drivers/sfc-0225-sfc-Add-remove-blank-lines-to-taste.patch
+	patches.drivers/sfc-0226-sfc-Use-pci_enable_msix_range-instead-of-pci_enable_.patch
 
 	########################################################
 	# Wireless Networking
